--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
                 <div class="pic">
-                    <img class="avatar is-rounded is-188x188" src="https://i.postimg.cc/Twt9sWkR/avatar.jpg" alt="[]">
+                    <img class="avatar is-rounded is-188x188" src="images/avatar-small.jpg" alt="[]">
                     <!-- <img class="avatar is-rounded is-188x188" src="https://s1.imagehub.cc/images/2024/09/29/81afdbe04a0818c553a4a5348e6f5ce8.jpeg" alt="[]"> -->
                     <!-- <img class="avatar is-rounded is-188x188" src="images/avatar.jpeg" alt="[]"> -->
                 </div>
@@ -112,12 +112,11 @@
                                 </td>
                                 <td width="30%">
                                     
-                                    <img src="https://i.postimg.cc/jdL8GZ0B/highlights-vmud.png" alt="highlights vmud">
+                                    <img src="images/highlights/highlights-vmud-small.png" alt="highlights vmud">
                                     <!-- <img src="https://s1.imagehub.cc/images/2024/09/29/d528c408f919219807720bc4dd882970.png" alt="highlights vmud"> -->
                                     <!-- <img src="images/highlights/highlights-vmud.png" alt="alt "> -->
                                 </td>
                             </tr>
-                            <tr>
 
                             <tr>
                                 <td width="70%">
@@ -131,7 +130,7 @@
                                     </div> -->
                                 </td>
                                 <td width="30%">
-                                    <img src="https://i.postimg.cc/ncgdZBnr/highlights-vision.png" alt="highlights vision">
+                                    <img src="images/highlights/highlights-vision-small.png" alt="highlights vision">
                                     <!-- <img src="https://s1.imagehub.cc/images/2024/09/29/dd281048c6aaa3bb781ceba568e4571e.png" alt="highlights vision"> -->
                                     <!-- <img src="images/highlights/highlights-vision.png" alt="alt "> -->
                                     <!-- <img src="images/highlights/highlights-vision.png" alt="alt "> -->
@@ -151,7 +150,7 @@
                                 <td width="30%">
                                     
                                     <!-- <img src="https://s1.imagehub.cc/images/2024/09/29/9b0c6fcf8f34bda3c879584212b4c123.png" alt="hl1"> -->
-                                    <img src="https://i.postimg.cc/MZsPPg4y/hl1.png" alt="hl1">
+                                    <img src="images/highlights/hl1-small.png" alt="hl1">
                                     <!-- <img src="images/highlights/hl1.png" alt="alt "> -->
                                 </td>
                             </tr>
@@ -185,44 +184,44 @@
                     <div class="content">
                         <ul id="collapsibleList" class="collapsible-content">
                             <li>
-                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion" is accepted by <a href="https://conf.researchr.org/track/icse-2025/icse-2025-research-track">ICSE 2025</a>.
+                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion" is accepted by <a href="https://conf.researchr.org/track/icse-2025/icse-2025-research-track">ICSE 2025</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>
+                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>
                                     I was honored to serve as a reviewer for the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">Transactions on Information Forensics & Security</a>.</p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.10]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence" is accepted by <a href="https://dl.acm.org/journal/tosem">ACM Transactions on Software Engineering and Methodology</a>.
+                                <p><span class="mydate"><strong>[2024.10]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence" is accepted by <a href="https://dl.acm.org/journal/tosem">ACM Transactions on Software Engineering and Methodology</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
                                 <!-- <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>. -->
-                                    <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                    <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
                                     </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
+                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
                                     in Open Source Licenses during Forking" is accepted by <a href="https://2024.issta.org/track/issta-2024-papers">ISSTA 2024</a>.
                                 </p>
                                 <p></p>
@@ -339,7 +338,7 @@
                         <!-- <hr> -->
                         <ol>
                             <li><p><b><font size="3" color="#0b5394">[ICSE'25]</font></b> <strong>LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion. </strong><br> Chong Wang, <u>Kaifeng Huang</u>, Jian Zhang, Yibo Feng, Lyuye Zhang, Yang Liu, Peng Xin.<em>&nbsp;In Proceedings of the 47th IEEE/ACM International Conference on Software Engineering, Ottawa, Ontario, Canada, accepted, 2025.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[TOSEM'24]</font></b> <strong>Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence. </strong><br> Junan Zhang, <u>Kaifeng Huang</u>, Yiheng Huang, Bihuan Chen, Ruisi Wang, Chong Wang, Xin Peng.<em>&nbsp;ACM Transactions on Software Engineering and Methodology,  accepted, 2024.</em></p></li>
+<li><p><b><font size="3" color="#0b5394">[TOSEM'24]</font></b> <strong>Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence. <a href="https://dl.acm.org/doi/10.1145/3705304">[PDF]</a></strong><br> Junan Zhang, <u>Kaifeng Huang</u>, Yiheng Huang, Bihuan Chen, Ruisi Wang, Chong Wang, Xin Peng.<em>&nbsp;ACM Transactions on Software Engineering and Methodology,  accepted, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[CCS'24]</font></b> <strong>VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching. <a href="https://dl.acm.org/doi/10.1145/3658644.3690372">[PDF]</a></strong><br> <u>Kaifeng Huang</u>, Chenhao Lu, Yiheng Cao, Bihuan Chen, Xin Peng.<em>&nbsp;In Proceedings of the 31th ACM Conference on Computer and Communications Security, Salt Lake City,  United States, pp. 3958-3972, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[ASE'24]</font></b> <strong>Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities. <a href="https://dl.acm.org/doi/10.1145/3691620.3695516">[PDF]</a></strong><br> Susheng Wu, Ruisi Wang, <u>Kaifeng Huang</u>, Yiheng Cao, Wenyan Song, Zhuotong Zhou, Yiheng Huang, Bihuan Chen, Xin Peng.<em>&nbsp;In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, pp. 1447-1459, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[ASE'24]</font></b> <strong>1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection. <a href="https://dl.acm.org/doi/10.1145/3691620.3695493">[PDF]</a></strong><br> Xiaobing Sun, Xingan Gao, Sicong Cao, Lili Bo, Xiaoxue Wu, <u>Kaifeng Huang</u>.<em>&nbsp;In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, pp. 1159-1170, 2024.</em></p></li>
@@ -377,7 +376,7 @@
                 <hr class="rounded3">
                 <section>
                     <div class="content">
-                        <h3>CVEs found by <a href="">VMUD</a>:</h3>
+                        <h3>CVEs found by <a href="#publication">VMUD</a>:</h3>
                         <ul>
                             <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-24891">CVE-2024-24891</a>: Exposure of Sensitive Information to an Unauthorized Actor vulnerability in <a href="https://gitee.com/openeuler/kernel">openEuler/kernel</a>.</li>
                             <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-24898">CVE-2024-24898</a>: Exposure of Sensitive Information to an Unauthorized Actor vulnerability in <a href="https://gitee.com/openeuler/kernel">openEuler/kernel</a>.</li>
