--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Kaifeng Huang - Home</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main-min.css" />
     <link rel="stylesheet" href="assets/css/fontawesome-all.min.css" />
     <!-- CSS only -->
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -184,44 +184,44 @@
                     <div class="content">
                         <ul id="collapsibleList" class="collapsible-content">
                             <li>
-                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion" is accepted by <a href="https://conf.researchr.org/track/icse-2025/icse-2025-research-track">ICSE 2025</a>.
+                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion" is accepted by <a href="https://conf.researchr.org/track/icse-2025/icse-2025-research-track">ICSE 2025</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>
+                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>
                                     I was honored to serve as a reviewer for the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">Transactions on Information Forensics & Security</a>.</p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.10]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence" is accepted by <a href="https://dl.acm.org/journal/tosem">ACM Transactions on Software Engineering and Methodology</a>.
+                                <p><span class="mydate"><strong>[2024.10]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence" is accepted by <a href="https://dl.acm.org/journal/tosem">ACM Transactions on Software Engineering and Methodology</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
                                 <!-- <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>. -->
-                                    <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                    <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
                                     </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
+                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
                                     in Open Source Licenses during Forking" is accepted by <a href="https://2024.issta.org/track/issta-2024-papers">ISSTA 2024</a>.
                                 </p>
                                 <p></p>
@@ -412,7 +412,7 @@
                     <div class="content">
                         <h3>Journal Reviewers:</h3>
                         <ul>
-                            <li>Transactions on Information Forensics & Security</li>
+                            <li>IEEE Transactions on Information Forensics & Security</li>
                             <li>ACM Transactions on Software Engineering and Methodology</li>
                             <li>Journal of Software: Evolution and Process</li>
                             <li>IEEE Transactions on Software Engineering</li>
@@ -464,7 +464,7 @@
                         <dl class="alt">
                             <!-- <img src="" alt="tongjimail" border="0"> -->
                             <!-- <b>Mail:</b> kaifengh<img src="images/tongjimail.png" style="width:112px;height:17px;" alt=""></a> -->
-                            <b>Mail:</b>&nbsp;kaifengh<img src="https://i.postimg.cc/CKHJj2kn/tongjimail.png" style="width:112px;height:17px;" alt=""></a>
+                            <b>Mail:</b>&nbsp;kaifengh<img src="" style="width:112px;height:17px;" alt=""></a>
                         </dl>
                         <dl class="contact-icons color1">
                             <!-- <h2>Links:</h2> -->
@@ -509,12 +509,11 @@
     <!-- Scripts -->
     <script src="https://s3.pstatp.com/cdn/expire-1-w/jquery/3.4.1/jquery.min.js"></script>
     <!-- <script src="assets/js/jquery.min.js"></script> -->
-    
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
+    <script src="assets/js/util-min.js"></script>
     <script src="assets/js/keyboard.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main-min.js"></script>
 
 </body>
 
