--- a/index_template.html
+++ b/index_template.html
@@ -183,45 +183,59 @@
                 <div class="row">
                     <div class="content">
                         <ul id="collapsibleList" class="collapsible-content">
+
                             <li>
-                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion" is accepted by <a href="https://conf.researchr.org/track/icse-2025/icse-2025-research-track">ICSE 2025</a>.
+                                <p><span class="mydate"><strong>[2025.02]&nbsp;</strong></span>
+                                    I was honored to serve on the program committee of the Research Track at <a href="https://conf.researchr.org/home/ase-2025">ASE 2025</a>. Welcome to submit your papers!</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p><span class="mydate"><strong>[2025.02]&nbsp;</strong></span>
+                                    I was honored to serve on the program committee at <a href="https://llmsc.github.io/">the 1st International Workshop on Large Language Model Supply Chain Analysis (LLMSC 2025)</a>. Welcome to submit your papers!</p>
+                                <p></p>
+                            </li>
+
+
+
+                            <li>
+                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong></span>Our paper titled "LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion" is accepted by <a href="https://conf.researchr.org/track/icse-2025/icse-2025-research-track">ICSE 2025</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>
+                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong></span>
                                     I was honored to serve as a reviewer for the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">Transactions on Information Forensics & Security</a>.</p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.10]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence" is accepted by <a href="https://dl.acm.org/journal/tosem">ACM Transactions on Software Engineering and Methodology</a>.
+                                <p><span class="mydate"><strong>[2024.10]&nbsp;</strong></span>Our paper titled "Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence" is accepted by <a href="https://dl.acm.org/journal/tosem">ACM Transactions on Software Engineering and Methodology</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
                                 <!-- <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>. -->
-                                    <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                    <p><span class="mydate"><strong>[2024.08]&nbsp;</strong></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
                                     </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="images/new2-static.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
+                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
                                     in Open Source Licenses during Forking" is accepted by <a href="https://2024.issta.org/track/issta-2024-papers">ISSTA 2024</a>.
                                 </p>
                                 <p></p>
@@ -407,6 +421,8 @@
                         </ul>
                         <h3>Conference PC Members:</h3>
                         <ul>
+                            <li>Research Track, ASE 2025</li>
+                            <li>The 1st International Workshop on Large Language Model Supply Chain Analysis (LLMSC 2025)</li>
                             <li>面向复杂系统的软件分析与测试专刊《Automated Software Engineering Journal》, CCF ChinaSoft 2024</li>
                             <li>Early Research Achievement, SANER 2025</li>
                             <li>AIWare Challenge, 2024</li>
