--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
            </strong>
            <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
-          I was honored to serve on the program committee of the Research Track at
+          I was invited to serve on the program committee of the Research Track at
           <a href="https://conf.researchr.org/home/ase-2025">
            ASE 2025
           </a>
@@ -323,7 +323,7 @@
            </strong>
            <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
-          I was honored to serve on the program committee at
+          I was invited to serve on the program committee at
           <a href="https://llmsc.github.io/">
            the 1st International Workshop on Large Language Model Supply Chain Analysis (LLMSC 2025)
           </a>
@@ -357,7 +357,7 @@
            </strong>
            <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
-          I was honored to serve as a reviewer for the
+          I was invited to serve as a reviewer for the
           <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">
            Transactions on Information Forensics &amp; Security
           </a>
