--- a/index_template.html
+++ b/index_template.html
@@ -186,12 +186,12 @@
 
                             <li>
                                 <p><span class="mydate"><strong>[2025.02]&nbsp;</strong></span>
-                                    I was honored to serve on the program committee of the Research Track at <a href="https://conf.researchr.org/home/ase-2025">ASE 2025</a>. Welcome to submit your papers!</p>
+                                    I was invited to serve on the program committee of the Research Track at <a href="https://conf.researchr.org/home/ase-2025">ASE 2025</a>. Welcome to submit your papers!</p>
                                 <p></p>
                             </li>
                             <li>
                                 <p><span class="mydate"><strong>[2025.02]&nbsp;</strong></span>
-                                    I was honored to serve on the program committee at <a href="https://llmsc.github.io/">the 1st International Workshop on Large Language Model Supply Chain Analysis (LLMSC 2025)</a>. Welcome to submit your papers!</p>
+                                    I was invited to serve on the program committee at <a href="https://llmsc.github.io/">the 1st International Workshop on Large Language Model Supply Chain Analysis (LLMSC 2025)</a>. Welcome to submit your papers!</p>
                                 <p></p>
                             </li>
 
@@ -205,7 +205,7 @@
 
                             <li>
                                 <p><span class="mydate"><strong>[2025.01]&nbsp;</strong></span>
-                                    I was honored to serve as a reviewer for the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">Transactions on Information Forensics & Security</a>.</p>
+                                    I was invited to serve as a reviewer for the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">Transactions on Information Forensics & Security</a>.</p>
                                 <p></p>
                             </li>
 
