--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
           </a>
          </li>
          <li>
-          <a href="https://orcid.org/my-orcid?orcid=0009-0000-1513-8254">
+          <a href="https://orcid.org/0009-0000-1513-8254">
            <img alt="" src="images/ORCID_iD.svg" style="width:33px;height:33px;"/>
           </a>
          </li>
