--- a/index_template.html
+++ b/index_template.html
@@ -480,7 +480,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="https://orcid.org/my-orcid?orcid=0009-0000-1513-8254"> <img src="images/ORCID_iD.svg" style="width:33px;height:33px;" alt=""></a>
+                                    <a href="https://orcid.org/0009-0000-1513-8254"> <img src="images/ORCID_iD.svg" style="width:33px;height:33px;" alt=""></a>
                                 </li>
                             </ul>
                         </dl>
