--- a/index_template.html
+++ b/index_template.html
@@ -408,6 +408,7 @@
                     <div class="content">
                         <h3>Journal Reviewers:</h3>
                         <ul>
+                            <li>IEEE Transactions on Computational Social Systems</li>
                             <li>IEEE Transactions on Information Forensics & Security</li>
                             <li>ACM Transactions on Software Engineering and Methodology</li>
                             <li>Journal of Software: Evolution and Process</li>
